--- a/website/templates/posts/post_reading.html
+++ b/website/templates/posts/post_reading.html
@@ -4,11 +4,205 @@
 {% block content %}
 
 
-<img src="{{post.image}}" alt="" width="1200" height="550">
-<h1>{{post.post_title}}</h1>
+
+<!-- <h1>{{post.post_title}}</h1>
 <p>{{ post.body|safe }}</p>
 <p>publish at {{post.created_date}}</p>
-<p>author : {{post.creater}}</p>
+<p>author : {{post.creater}}</p> -->
+
+
+    <style>
+        /* stylelint-disable selector-list-comma-newline-after */
+    
+        .blog-header {
+            line-height: 1;
+            border-bottom: 1px solid #e5e5e5;
+        }
+    
+        .blog-header-logo {
+            font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+            font-size: 2.25rem;
+        }
+    
+        .blog-header-logo:hover {
+            text-decoration: none;
+        }
+    
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+        }
+    
+        .display-4 {
+            font-size: 2.5rem;
+        }
+    
+        @media (min-width: 768px) {
+            .display-4 {
+                font-size: 3rem;
+            }
+        }
+    
+        .nav-scroller {
+            position: relative;
+            z-index: 2;
+            height: 2.75rem;
+            overflow-y: hidden;
+        }
+    
+        .nav-scroller .nav {
+            display: flex;
+            flex-wrap: nowrap;
+            padding-bottom: 1rem;
+            margin-top: -1px;
+            overflow-x: auto;
+            text-align: center;
+            white-space: nowrap;
+            -webkit-overflow-scrolling: touch;
+        }
+    
+        .nav-scroller .nav-link {
+            padding-top: .75rem;
+            padding-bottom: .75rem;
+            font-size: .875rem;
+        }
+    
+        .card-img-right {
+            height: 100%;
+            border-radius: 0 3px 3px 0;
+        }
+    
+        .flex-auto {
+            flex: 0 0 auto;
+        }
+    
+        .h-250 {
+            height: 250px;
+        }
+    
+        @media (min-width: 768px) {
+            .h-md-250 {
+                height: 250px;
+            }
+        }
+    
+        /* Pagination */
+        .blog-pagination {
+            margin-bottom: 4rem;
+        }
+    
+        .blog-pagination>.btn {
+            border-radius: 2rem;
+        }
+    
+        /*
+                * Blog posts
+                */
+        .blog-post {
+            margin-bottom: 4rem;
+        }
+    
+        .blog-post-title {
+            margin-bottom: .25rem;
+            font-size: 2.5rem;
+        }
+    
+        .blog-post-meta {
+            margin-bottom: 1.25rem;
+            color: #727272;
+        }
+    
+        /*
+                * Footer
+                */
+        .blog-footer {
+            padding: 2.5rem 0;
+            color: #727272;
+            text-align: center;
+            background-color: #f9f9f9;
+            border-top: .05rem solid #e5e5e5;
+        }
+    
+        .blog-footer p:last-child {
+            margin-bottom: 0;
+        }
+    </style>
+
+
+    <div class="container">
+        <header class="blog-header py-3">
+            <div class="row flex-nowrap justify-content-between align-items-center">
+                <div class="col-4 pt-1">
+                    <h4 class="link-secondary fw-bolder">xudayfi</h4>
+                </div>
+    
+    
+            </div>
+        </header>
+    
+    
+    
+        <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
+            <div class="col-md-6 px-0">
+                <h1 class="display-4 font-italic">{{post.post_title}}</h1>
+                <p class="lead my-3">publish at {{post.created_date}}</p>
+                <p class="lead mb-0">Author is {{post.creater}}</p>
+            </div>
+        </div>
+    
+    
+    </div>
+    
+    <main class="container">
+        <div class="row">
+            <div class="col-md-8">
+    
+    
+                <!--blog post -->
+    
+                
+                {{ post.body|safe }}
+                
+    
+    
+                <!--ended blog post-->
+    
+    
+    
+    
+    
+    
+            </div>
+    
+            <aside class="col-md-4">
+                <div class="p-4 mb-3 bg-light rounded">
+                    <h4 class="font-italic">About</h4>
+                    <p class="mb-0">I am <em>{{post.creater}}</em>, teacher for computer science</p>
+                </div>
+    
+    
+    
+                <div class="p-4">
+                    <h4 class="font-italic">Contact me</h4>
+                    <ol class="list-unstyled">
+                        <li><a href="#" class="link-dark fw-bold text-decoration-none">➡️ Wathsapp</a></li>
+                        <li><a href="#" class="link-dark fw-bold text-decoration-none">➡️ Twitter</a></li>
+                        <li><a href="#" class="link-dark fw-bold text-decoration-none">➡️ Facebook</a></li>
+                    </ol>
+                </div>
+            </aside>
+    
+        </div><!-- /.row -->
+    
+    </main><!-- /.container -->
+    
+    <footer class="blog-footer">
+        <p>Copyright recived </p>
+    </footer>
 
 
 
